# ink-node

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  zombienet.toml
.github/workflows/: ci.yml
integration-tests/: Cargo.toml
integration-tests/contracts/assets/: Cargo.toml  lib.rs
integration-tests/contracts/xcm/: Cargo.toml  lib.rs
integration-tests/interfaces/: IERC20.sol
integration-tests/src/: assets.rs  lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
node/src/chain_spec/: dev.rs
node/src/service/: dev.rs
parachain-runtime/: Cargo.toml
parachain-runtime/src/: assets_config.rs  lib.rs  revive_config.rs  xcm_config.rs
runtime/: Cargo.toml
runtime/src/: IDemo.sol  IDemo2.sol  IFoo.sol  assets_config.rs  demo_precompile.rs  demo_precompile2.rs  foo_precompile.rs  lib.rs  revive_config.rs
