[workspace.package]
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
version = "0.43.2"
license = "Unlicense"
homepage = "https://use.ink"
repository = "https://github.com/use-ink/ink-node"

[workspace]
resolver = "2"
members = ["node", "runtime", "parachain-runtime"]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
clap = { version = "4.5.13", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
] }
futures = "0.3.31"
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.24.3", features = ["server"] }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }
smallvec = "1.11.0"
color-print = "0.3.4"
wasmtime = "8.0.1"

# Substrate
frame-benchmarking = { version = "40.2.0", default-features = false }
frame-benchmarking-cli = { version = "47.2.0" }
frame-executive = { version = "40.0.1", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-support-procedural = { version = "33.0.1", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
sc-basic-authorship = { version = "0.49.0" }
sc-chain-spec = { version = "42.0.0" }
sc-cli = { version = "0.51.0" }
sc-client-api = { version = "39.0.0" }
sc-consensus = { version = "0.48.0" }
sc-executor = { version = "0.42.0" }
sc-network = { version = "0.49.1" }
sc-network-sync = { version = "0.48.0" }
sc-offchain = { version = "44.0.0" }
sc-rpc = { version = "44.0.0" }
sc-service = { version = "0.50.0" }
sc-sysinfo = { version = "42.0.0" }
sc-telemetry = { version = "28.1.0" }
sc-tracing = { version = "39.0.0" }
sc-transaction-pool = { version = "39.0.0" }
sc-transaction-pool-api = { version = "39.0.0" }
sp-api = { version = "36.0.1", default-features = false }
sp-keyring = { version = "41.0.0", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-blockchain = { version = "39.0.0" }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-keystore = { version = "0.42.0" }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-timestamp = { version = "36.0.0" }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
substrate-frame-rpc-system = { version = "43.0.0" }
prometheus-endpoint = { version = "0.17.2", package = "substrate-prometheus-endpoint", default-features = false }
substrate-wasm-builder = { version = "26.0.1" }
substrate-build-script-utils = { version = "11.0.0" }
try-runtime-cli = { version = "0.42.0" }

# extra deps for running a solo node on top of a parachain
pallet-grandpa = { version = "40.0.0", default-features = false }
sc-consensus-grandpa = { version = "0.34.0", default-features = false }
sp-consensus-grandpa = { version = "23.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sc-consensus-aura = { version = "0.49.0", default-features = false }
sc-consensus-manual-seal = { version = "0.50.0", default-features = false }

# extra deps for setting up pallet-revive
pallet-assets = { version = "42.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "28.0.0", default-features = false }
pallet-revive = { version = "0.6.1", default-features = false }
pallet-revive-uapi = { version = "0.4.0", default-features = false, features = ["scale", "$unstable-hostfn"] }
pallet-utility = { version = "40.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "19.1.2", default-features = false }
polkadot-cli = { version = "23.0.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-primitives = { version = "18.1.0" }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
xcm = { version = "16.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "20.1.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "19.1.2", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.22.0" }
cumulus-client-collator = { version = "0.22.0" }
cumulus-client-consensus-proposer = { version = "0.19.0" }
cumulus-client-consensus-aura = { version = "0.22.0" }
cumulus-client-consensus-common = { version = "0.22.0" }
cumulus-client-service = { version = "0.23.0" }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.18.1" }
cumulus-primitives-timestamp = { version = "0.19.0", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.22.0" }
pallet-collator-selection = { version = "21.0.0", default-features = false }
parachain-info = { version = "0.20.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "21.0.0", default-features = false }

# todo Pin until https://github.com/jhpratt/deranged/issues/18 is resolved
deranged = { version = "=0.4.0", default-features = false }

# hotfix for https://github.com/paritytech/polkadot-sdk/issues/7653
[patch.'https://github.com/w3f/fflonk']
fflonk = { git = "https://www.github.com/w3f/fflonk", rev = "be95d4c971b1d15b5badfc06ff13f5c07987d484" }
