[workspace.package]
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
version = "0.44.0"
license = "Unlicense"
homepage = "https://use.ink"
repository = "https://github.com/use-ink/ink-node"

[workspace]
resolver = "2"
members = ["node", "runtime", "parachain-runtime"]

[profile.release]
panic = 'unwind'

[workspace.dependencies]
clap = { version = "4.5.13", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = [
  "derive",
] }
futures = "0.3.31"
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.24.3", features = ["server"] }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
scale-info = { version = "2.11.6", default-features = false, features = [
  "derive",
] }
smallvec = "1.11.0"
color-print = "0.3.4"
wasmtime = "8.0.1"

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-support-procedural = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", package = "substrate-prometheus-endpoint", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
try-runtime-cli = { version = "0.42.0" }

# extra deps for running a solo node on top of a parachain
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }

# extra deps for setting up pallet-revive
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-revive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
pallet-revive-uapi = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false, features = ["scale", "$unstable-hostfn"] }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-client-consensus-proposer ={ git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-client-consensus-common ={ git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", package = "staging-parachain-info", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "cb629d46ebf00aa65624013a61f9c69ebf02b0b4", default-features = false }