[package]
name = "integration-tests"
version = "0.1.0"
authors = ["R0GUE <go@r0gue.io>"]
edition = "2021"

[package.metadata.ink-lang]
abi = "all"

[dev-dependencies]
codec.workspace = true
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
hex = "0.4.3"
log.workspace = true
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-revive = { workspace = true, default-features = false }
ink-parachain-runtime = { path = "../parachain-runtime", default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"ink-parachain-runtime/std",
	"sp-io/std",
	"sp-runtime/std",
]