[package]
authors = [ "R0GUE <go@r0gue.io>" ]
edition = "2021"
name = "xcm"
version = "0.1.0"

[package.metadata.ink-lang]
abi = "sol"

[workspace]

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "nightly", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
scale-info = { version = "2" }
hex = { version = "0.4.3" }

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
ink-as-dependency = [  ]
std = [ "ink/std" ]

[lints.rust.unexpected_cfgs]
check-cfg = [ 'cfg(ink_abi, values("ink", "sol", "all"))' ]
level = "warn"